--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,17 +35,15 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-gradle-
             
-      # main 설정 파일 생성 및 write
-      - name: Set .yml for main
-        run: |
-          # main 설정 파일 디렉토리로 이동
-          cd ./src/main/resources
-          touch ./application-database.yaml
-          echo "${{ secrets.MAIN_DATABASE_YML }}" >> ./application-database.yml
-          touch ./applaction-oauth.yaml
-          echo "${{ secrets.MAIN_OAUTH_YML }}" >> ./applcation-oauth.yml
-        shell: bash
-
+      # application-*.yml file 생성
+      - name: Create application-db.yml 
+        run:
+          touch ./src/main/resources/application-db.yml
+          echo "${{ secrets.MAIN_DATABASE_YML }}" >> ./src/main/resources/application-db.yml
+      - name: Create application-oauth.yml 
+          touch ./src/main/resources/applaction-oauth.yml
+          echo "${{ secrets.MAIN_OAUTH_YML }}" >> ./src/main/resources/applaction-oauth.yml
+      
       # Gradle build
       - name: Build with Gradle
         run: ./gradlew bootJar
@@ -54,7 +52,7 @@ jobs:
       - name: Build Docker Image For Spring
         run: |
           docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
-          docker build -t ${{ secrets.DOCKER_USERNAME }}/도커 레파지토리 이름 .
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/도커 레파지토리 이름
           docker push ${{ secrets.DOCKER_USERNAME }}/도커 레파지토리 이름
           
       # 서버에서 Docker 이미지 실행
