--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,9 +2,9 @@ name: MapChat Spring Boot & Gradle & Docker & EC2 CD
 
 on:
   push:
-    branches: [ master, develop ]
+    branches: [ master ]
   pull_request: 
-    branches: [ master, develop ]
+    branches: [ master ]
 
 jobs:
   build:
@@ -28,7 +28,7 @@ jobs:
           echo "${{ secrets.DB_YML }}" >> ./src/main/resources/application-db.yml
       - name: Create application-oauth.yml 
           touch ./src/main/resources/applaction-oauth.yml
-          echo "${{ secrets.MAIN_OAUTH_YML }}" >> ./src/main/resources/applaction-oauth.yml
+          echo "${{ secrets.OAUTH_YML }}" >> ./src/main/resources/applaction-oauth.yml
       
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
