[fix] run keyword 추가

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,6 +27,7 @@ jobs:
 #           touch ./src/main/resources/application-db.yml
 #           echo "${{ secrets.DB_YML }}" >> ./src/main/resources/application-db.yml
       - name: Create application-oauth.yml 
+        run:
           touch ./src/main/resources/applaction-oauth.yml
           echo "${{ secrets.OAUTH_YML }}" >> ./src/main/resources/applaction-oauth.yml
       
