--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,6 +9,10 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest #ubuntu 최신 버전 
+    env :
+      working-directory: ./
+      APPLICATIOn: ${{ secrets.APPLICATION }}
+      
     steps:
       # 기본 체크아웃
       - name: Checkout
@@ -20,39 +24,68 @@ jobs:
         with:
           java-version: '11'
           distribution: 'temurin'
-          
-#       # application-*.yml file 생성
-#       - name: Create application-db.yml 
-#         run:
-#           touch ./src/main/resources/application-db.yml
-#           echo "${{ secrets.DB_YML }}" >> ./src/main/resources/application-db.yml
-      - name: Create application-oauth.yml 
-        run:
-          touch ./src/main/resources/applaction-oauth.yml
-          echo "${{ secrets.OAUTH_YML }}" >> ./src/main/resources/applaction-oauth.yml
       
+      # Gradle Caching
+      - name : Cache Gradle packages
+        uses : actions/cache@v2
+        with:
+          path: |
+                ~/.gradle/caches
+                ~/.gradle/wrapper
+          keys: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle', '**/gradle-wrapper.properties') }}
+          restore-keys: |
+                ${{ runner.os }}-gradle-
+      - uses: actions/checkout@v3
+      - run: touch ./src/main/resources/application.yml
+      - run: echo "${{env.APPLICATION}}"> ./src/main/resources/application.yml
+      - uses: actions/upload-artifact@v2
+        with:
+          name: application.yml
+          path: ./src/main/resources/application.yml
+          
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
+        working-directory: ${{ env.working-directory }}
       
       - name: Build with Gradle
         run: ./gradlew clean build
-
-#       # Spring 어플리케이션 Docker Image 빌드
-#       - name: Build Docker Image For Spring
-#         run: |
-#           docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
-#           docker build -t ${{ secrets.DOCKER_USERNAME }}/도커 레파지토리 이름
-#           docker push ${{ secrets.DOCKER_USERNAME }}/도커 레파지토리 이름
-          
-#       # 서버에서 Docker 이미지 실행
-#       - name: EC2 Docker Run
-#         uses: appleboy/ssh-action@master
+        working-directory: ${{ env.working-directory }}
+        
+      - name: Cleanup Gradle Cache
+        if: ${{ always() }}
+        run: |
+            rm -f ~/.gradle/caches/modules-2/modules-2.lock
+            rm -f ~/.gradle/caches/modules-2/gc.properties
+            
+      - name: Docker build
+        run: |
+          docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
+          docker build -t ${{ secrets.PROJECT_NAME }} /도커 레파지토리 이름
+          docker tag ${{ secrets.PROJECT_NAME }} ${{ secrets.DOCKER_HUB_REPO }}:${GITHUB_SHA::7}
+          docker push ${{ secrets.DOCKER_HUB_REPO }}:${GITHUB_SHA::7} /도커 레파지토리 이름
+      
+      - name: Deploy
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.EC2_SERVER_HOST }}
+          username: ec2-user
+          key: ${{ secrets.PRIVATE_KEY }}
+          envs: GITHUB_SHA
+          script: |
+              docker rmi $(docker images -q)
+              docker pull ${{ secrets.DOCKER_HUB_REPO }}:${GITHUB_SHA::7}
+              docker tag ${{ secrets.DOCKER_HUB_REPO }}:${GITHUB_SHA::7} ${{ secrets.PROJECT_NAME }}
+              docker stop ${{ secrets.PROJECT_NAME }}
+              docker rm ${{ secrets.PROJECT_NAME }}
+              docker run -d --name ${{ secrets.PROJECT_NAME }} -p 80:8080 ${{ secrets.PROJECT_NAME }}
+              
+#       - name: acion-slack
+#         uses: 8398a7/action-slack@v3
 #         with:
-#           host: ${{ secrets.EC2_HOST }}
-#           username: ubuntu
-#           key: ${{ secrets.EC2_KEY }}
-#           script: |
-#             docker rm -f $(docker ps -qa)
-#             docker rmi ${{ secrets.DOCKER_USERNAME }}/도커 레파지토리 이름
-#             docker pull ${{ secrets.DOCKER_USERNAME }}/도커 레파지토리 이름
-#             docker-compose up -d
+#           status: ${{ job.status }}
+#           author_name: Github Action Test
+#           fields: repo, message, commit, author, action, eventName, ref, workflow, job, took
+#         env:
+#           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+#         if: always()
+    
