[fix] Gradle caching 수정(keys -> key)

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,9 +30,9 @@ jobs:
         uses : actions/cache@v2
         with:
           path: |
-                ~/.gradle/caches
-                ~/.gradle/wrapper
-          keys: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle', '**/gradle-wrapper.properties') }}
+               ~/.gradle/caches
+               ~/.gradle/wrapper
+          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle', '**/gradle-wrapper.properties') }}
           restore-keys: |
                 ${{ runner.os }}-gradle-
       - uses: actions/checkout@v3
