--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,6 +12,7 @@ jobs:
     env :
       working-directory: ./
       APPLICATION: ${{ secrets.APPLICATION }}
+      APPLICATION_OAUTH: ${{ secrets.OAUTH }}
       
     steps:
       # 기본 체크아웃
@@ -26,8 +27,8 @@ jobs:
           distribution: 'temurin'
       
       # Gradle Caching
-      - name : Cache Gradle packages
-        uses : actions/cache@v2
+      - name: Cache Gradle packages
+        uses: actions/cache@v2
         with:
           path: |
                ~/.gradle/caches
@@ -36,12 +37,22 @@ jobs:
           restore-keys: |
                 ${{ runner.os }}-gradle-
       - uses: actions/checkout@v3
+      
+      - name: Create application.yml
       - run: touch ./src/main/resources/application.yml
       - run: echo "${{env.APPLICATION}}"> ./src/main/resources/application.yml
       - uses: actions/upload-artifact@v2
         with:
           name: application.yml
           path: ./src/main/resources/application.yml
+      
+      - name: Create application-oauth.yml
+      - run: touch ./src/main/resources/application-oauth.yml
+      - run: echo "${{env.APPLICATION_OAUTH}}"> ./src/main/resources/application-oauth.yml
+      - uses: actions/upload-artifact@v2
+        with:
+          name: application-oauth.yml
+          path: ./src/main/resources/application-oauth.yml
           
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
