--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,1 +1,25 @@
-
+spring:
+  profiles:
+    include: oauth
+  jpa:
+    hiberante:
+      ddl-auto: create
+      format_sql: 'true'
+    show-sql: 'true'
+  h2:
+    console:
+      enabled: true
+      path: /h2-console
+      settings:
+        trace: false
+        web-allow-others: false
+  datasource:
+    driver-class-name: org.h2.Driver
+    url: jdbc:h2:mem:yonggamsa
+    username: sa
+    password:
+  data:
+    mongodb:
+      host: localhost
+      port: 27017
+      database: chat
