--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,16 +39,18 @@ jobs:
       - uses: actions/checkout@v3
       
       - name: Create application.yml
-      - run: touch ./src/main/resources/application.yml
-      - run: echo "${{env.APPLICATION}}"> ./src/main/resources/application.yml
+      - run: 
+          touch ./src/main/resources/application.yml
+          echo "${{env.APPLICATION}}"> ./src/main/resources/application.yml
       - uses: actions/upload-artifact@v2
         with:
           name: application.yml
           path: ./src/main/resources/application.yml
       
       - name: Create application-oauth.yml
-      - run: touch ./src/main/resources/application-oauth.yml
-      - run: echo "${{env.APPLICATION_OAUTH}}"> ./src/main/resources/application-oauth.yml
+      - run: 
+          touch ./src/main/resources/application-oauth.yml
+          echo "${{env.APPLICATION_OAUTH}}"> ./src/main/resources/application-oauth.yml
       - uses: actions/upload-artifact@v2
         with:
           name: application-oauth.yml
