--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -47,14 +47,14 @@ jobs:
           name: application.yml
           path: ./src/main/resources/application.yml
       
-      - name: Create application-oauth.yml
-      - run: 
-          touch ./src/main/resources/application-oauth.yml
-          echo "${{env.APPLICATION_OAUTH}}"> ./src/main/resources/application-oauth.yml
-      - uses: actions/upload-artifact@v2
-        with:
-          name: application-oauth.yml
-          path: ./src/main/resources/application-oauth.yml
+#       - name: Create application-oauth.yml
+#       - run: 
+#           touch ./src/main/resources/application-oauth.yml
+#           echo "${{env.APPLICATION_OAUTH}}"> ./src/main/resources/application-oauth.yml
+#       - uses: actions/upload-artifact@v2
+#         with:
+#           name: application-oauth.yml
+#           path: ./src/main/resources/application-oauth.yml
           
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
