--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,24 +37,21 @@ jobs:
           restore-keys: |
                 ${{ runner.os }}-gradle-
       - uses: actions/checkout@v3
-      
-      - name: Create application.yml
       - run: 
           touch ./src/main/resources/application.yml
           echo "${{env.APPLICATION}}"> ./src/main/resources/application.yml
+          
       - uses: actions/upload-artifact@v2
         with:
           name: application.yml
           path: ./src/main/resources/application.yml
-      
-#       - name: Create application-oauth.yml
-#       - run: 
-#           touch ./src/main/resources/application-oauth.yml
-#           echo "${{env.APPLICATION_OAUTH}}"> ./src/main/resources/application-oauth.yml
-#       - uses: actions/upload-artifact@v2
-#         with:
-#           name: application-oauth.yml
-#           path: ./src/main/resources/application-oauth.yml
+      - run:
+          touch ./src/main/resources/application-oauth.yml
+          echo "${{env.APPLICATION_OAUTH}}"> ./src/main/resources/application-oauth.yml
+      - uses: actions/upload-artifact@v2
+        with:
+          name: application-oauth.yml
+          path: ./src/main/resources/application-oauth.yml
           
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
