[docs] jar 파일 build 명 세팅

--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,13 @@ group = 'com.yonggamsa'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '11'
 
+bootJar {
+    archivesBaseName = 'mapchat'
+    archiveFileName = 'mapchat.jar'
+}
+
+
+
 configurations {
 	compileOnly {
 		extendsFrom annotationProcessor
