--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -83,7 +83,10 @@ jobs:
           envs: GITHUB_SHA
           script: |
               echo "${{ secrets.DOCKER_PASSWORD }}" | docker login docker.pkg.github.com -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+              docker rmi $(docker images -q)
               docker pull ${{ secrets.DOCKER_HUB_REPO }}:${GITHUB_SHA::7}
+              docker stop ${{ secrets.PROJECT_NAME }}
+              docker rm ${{ secrets.PROJECT_NAME }}
               docker tag ${{ secrets.DOCKER_HUB_REPO }}:${GITHUB_SHA::7} ${{ secrets.PROJECT_NAME }}
               docker run -d --name ${{ secrets.PROJECT_NAME }} -p 80:8080 ${{ secrets.PROJECT_NAME }}
               
