[feat] chatroom 구현

--- a/build.gradle
+++ b/build.gradle
@@ -39,13 +39,15 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client:2.6.2'
 	testImplementation 'org.springframework.security:spring-security-test'
 
+	// DB
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'com.h2database:h2'
 	runtimeOnly 'com.h2database:h2'
 
 	// websocket
 	implementation 'org.springframework.boot:spring-boot-starter-websocket'
-	implementation 'org.webjars:sockjs-client:1.0.2'
-	implementation 'org.webjars:stomp-websocket:2.3.3'
+	implementation 'org.webjars:sockjs-client'
+	implementation 'org.webjars:stomp-websocket'
+	implementation 'com.google.code.gson:gson'
 }
 
