--- a/build.gradle
+++ b/build.gradle
@@ -46,8 +46,8 @@ dependencies {
 
 	// websocket
 	implementation 'org.springframework.boot:spring-boot-starter-websocket'
-	implementation 'org.webjars:sockjs-client'
-	implementation 'org.webjars:stomp-websocket'
+	implementation 'org.webjars:sockjs-client:1.0.2'
+	implementation 'org.webjars:stomp-websocket:2.3.3'
 	implementation 'com.google.code.gson:gson'
 }
 
