[feat] 에러 해결용 임시 push

--- a/build.gradle
+++ b/build.gradle
@@ -42,6 +42,7 @@ dependencies {
 	// DB
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'com.h2database:h2'
+	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb-reactive'
 	runtimeOnly 'com.h2database:h2'
 
 	// websocket
