[fix] remove bash command( #!/bin/bash )

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -85,12 +85,12 @@ jobs:
           key: ${{ secrets.PRIVATE_KEY }}
           envs: GITHUB_SHA
           script: |
-              #!/bin/bash echo "${{ secrets.DOCKER_PASSWORD }}" | docker login docker.pkg.github.com -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
-              #!/bin/bash docker pull ${{ secrets.DOCKER_HUB_REPO }}:${GITHUB_SHA::7}
-              #!/bin/bash docker stop ${{ secrets.PROJECT_NAME }}
-              #!/bin/bash docker rm ${{ secrets.PROJECT_NAME }}
-              #!/bin/bash docker tag ${{ secrets.DOCKER_HUB_REPO }}:${GITHUB_SHA::7} ${{ secrets.PROJECT_NAME }}
-              #!/bin/bash docker run -d --name ${{ secrets.PROJECT_NAME }} -p 80:8080 ${{ secrets.PROJECT_NAME }}
+              echo "${{ secrets.DOCKER_PASSWORD }}" | docker login docker.pkg.github.com -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+              docker pull ${{ secrets.DOCKER_HUB_REPO }}:${GITHUB_SHA::7}
+              docker stop ${{ secrets.PROJECT_NAME }}
+              docker rm ${{ secrets.PROJECT_NAME }}
+              docker tag ${{ secrets.DOCKER_HUB_REPO }}:${GITHUB_SHA::7} ${{ secrets.PROJECT_NAME }}
+              docker run -d --name ${{ secrets.PROJECT_NAME }} -p 80:8080 ${{ secrets.PROJECT_NAME }}
               
       - name: acion-slack
         uses: 8398a7/action-slack@v3
